test/message/async-method-function.out
*%(basename)s:8: SyntaxError: Unexpected token function
  async function() { }
        ^^^^^^^^
SyntaxError: Unexpected token function
